Fix stats ticker infinite scroll: add third duplicate set and adjust animation to -33.333% for truly seamless looping without visible reset

--- a/index.html
+++ b/index.html
@@ -179,6 +179,37 @@
                 <strong>Certified</strong>
                 <span>Professionals</span>
             </div>
+            <!-- Second duplicate set for truly seamless scroll -->
+            <div class="stat-item">
+                <i class="fas fa-home"></i>
+                <strong>5000+</strong>
+                <span>Homes Protected</span>
+            </div>
+            <div class="stat-item">
+                <i class="fas fa-clock"></i>
+                <strong>24/7</strong>
+                <span>Emergency Response</span>
+            </div>
+            <div class="stat-item">
+                <i class="fas fa-users"></i>
+                <strong>15+</strong>
+                <span>Years Experience</span>
+            </div>
+            <div class="stat-item">
+                <i class="fas fa-star"></i>
+                <strong>100%</strong>
+                <span>Satisfaction Rate</span>
+            </div>
+            <div class="stat-item">
+                <i class="fas fa-leaf"></i>
+                <strong>Eco</strong>
+                <span>Friendly Solutions</span>
+            </div>
+            <div class="stat-item">
+                <i class="fas fa-award"></i>
+                <strong>Certified</strong>
+                <span>Professionals</span>
+            </div>
         </div>
     </div>
 
