Change title to 'Comprehensive Pest Services' and convert all text to British English spelling (ise instead of ize)

--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
     <section class="services" id="services">
         <div class="section-header">
             <div class="section-badge">Our Services</div>
-            <h2 class="section-title">Complete Pest Solutions</h2>
+            <h2 class="section-title">Comprehensive Pest Services</h2>
             <p class="section-subtitle">Advanced treatments tailored to your specific pest problems with guaranteed results</p>
         </div>
         
@@ -428,7 +428,7 @@
                         <li><i class="fas fa-check"></i> Smart tracking systems</li>
                         <li><i class="fas fa-check"></i> Exclusion techniques</li>
                         <li><i class="fas fa-check"></i> Bird proofing solutions</li>
-                        <li><i class="fas fa-check"></i> Sanitization service</li>
+                        <li><i class="fas fa-check"></i> Sanitisation service</li>
                         <li><i class="fas fa-check"></i> Monthly monitoring</li>
                     </ul>
                     <div class="service-cta">
@@ -463,7 +463,7 @@
                     <div class="step-number">2</div>
                     <div class="step-content">
                         <h3>Plan</h3>
-                        <p>Customized treatment strategy based on your specific pest problems</p>
+                        <p>Customised treatment strategy based on your specific pest problems</p>
                     </div>
                 </div>
                 
