--- a/index.html
+++ b/index.html
@@ -648,13 +648,13 @@
                 <h3>Coffs Coast Pest Control</h3>
                 <p>Your trusted partner in pest management. Protecting homes and businesses across the Coffs Coast with professional, reliable, and eco-friendly pest control solutions.</p>
                 <div class="social-links">
-                    <a href="#" class="social-link" aria-label="Facebook">
+                    <a href="https://www.facebook.com/coffscoastpestcontrol" class="social-link" aria-label="Facebook" target="_blank" rel="noopener noreferrer">
                         <i class="fab fa-facebook-f"></i>
                     </a>
-                    <a href="#" class="social-link" aria-label="Instagram">
+                    <a href="https://www.instagram.com/coffscoastpestcontrol/?hl=en" class="social-link" aria-label="Instagram" target="_blank" rel="noopener noreferrer">
                         <i class="fab fa-instagram"></i>
                     </a>
-                    <a href="#" class="social-link" aria-label="Google">
+                    <a href="https://www.google.com/search?q=Coffs+Coast+Pest+Control" class="social-link" aria-label="Google" target="_blank" rel="noopener noreferrer">
                         <i class="fab fa-google"></i>
                     </a>
                 </div>
